5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3997/executions/1616_2925.log
== TEST (2019-04-01 15:19:37) 
-- CODE:
n = input(2**(y))
print = n
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = input(2**(y))
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:22:33) 
-- CODE:
n = input(2**(3))
pop = (2**0)+(2**1)+(2*2)*(n)
print(pop)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pop = (2**0)+(2**1)+(2*2)*(n)
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:22:42) 
-- CODE:
n = input(2**(3))
pop = (2**0)+(2**1)+(2*2)*(n)
print(pop)
-- EXECUTION TIME:
0.153892
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2925/main.py", line 2, in <module>
    pop = (2**0)+(2**1)+(2*2)*(n)
TypeError: unsupported operand type(s) for +: 'int' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:22:59) 
-- CODE:
n = input(2**(3))
pop = (2**0)+(2**1)+(2*2)*(n)
print =(pop)
-- EXECUTION TIME:
0.201483
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2925/main.py", line 2, in <module>
    pop = (2**0)+(2**1)+(2*2)*(n)
TypeError: unsupported operand type(s) for +: 'int' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:23:03) 
-- CODE:
n = input(2**(3))
pop = (2**0)+(2**1)+(2*2)*(n)
print =(pop)
-- EXECUTION TIME:
0.209238
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2925/main.py", line 2, in <module>
    pop = (2**0)+(2**1)+(2*2)*(n)
TypeError: unsupported operand type(s) for +: 'int' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:23:32) 
-- CODE:
n = input(2**(3))
pop = (2**0)+(2**1)+(2*2)*(n)
print =(n)
-- EXECUTION TIME:
0.178805
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2925/main.py", line 2, in <module>
    pop = (2**0)+(2**1)+(2*2)*(n)
TypeError: unsupported operand type(s) for +: 'int' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:20) 
-- CODE:
n = input(2**(3)) 
print = (2**0)+(2**1)+(2*2)*(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print = (2**0)+(2**1)+(2*2)*(n)
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:31:23) 
-- CODE:
n = input(2**(3)) 
print = (2**0)+(2**1)+(2*2)*(n)

-- EXECUTION TIME:
0.165506
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2925/main.py", line 2, in <module>
    print = (2**0)+(2**1)+(2*2)*(n)
TypeError: unsupported operand type(s) for +: 'int' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:32:00) 
-- CODE:
n = input(2**("digite um numero")) 
print = (2**0)+(2**1)+(2*2)*(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = input(2**("digite um numero")) 
TypeError: unsupported operand type(s) for ** or pow(): 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:32:30) 
-- CODE:
n = input(int)(2**("digite um numero")) 
print = (2**0)+(2**1)+(2*2)*(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = input(int)(2**("digite um numero")) 
TypeError: unsupported operand type(s) for ** or pow(): 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:33:17) 
-- CODE:
n = input(int)(2**("") 
print = (2**0)+(2**1)+(2*2)*(n)

-- ERROR:
File "XXXX", line 2
    print = (2**0)+(2**1)+(2*2)*(n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:33:29) 
-- CODE:
n = input(int)(2**("y") 
print = (2**0)+(2**1)+(2*2)*(n)

-- ERROR:
File "XXXX", line 2
    print = (2**0)+(2**1)+(2*2)*(n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:33:46) 
-- CODE:
n = input(int)(2**(3) 
print = (2**0)+(2**1)+(2*2)*(n)

-- ERROR:
File "XXXX", line 2
    print = (2**0)+(2**1)+(2*2)*(n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:34:05) 
-- CODE:
n = input(int(2**3)) 
print = (2**0)+(2**1)+(2*2)*(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print = (2**0)+(2**1)+(2*2)*(n)
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:34:28) 
-- CODE:
n = input(int(2**3)) 
print = (2**0)+(2**1)+(2*2)*(2**3)

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:34:33) 
-- CODE:
n = input(int(2**3)) 
print = (2**0)+(2**1)+(2*2)*(2**3)

-- EXECUTION TIME:
0.206109
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
8
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
8
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:36:21) 
-- CODE:
n = int(input(2**3))
print = (n)

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:36:23) 
-- CODE:
n = int(input(2**3))
print = (n)

-- EXECUTION TIME:
0.177316
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
8
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
8
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:44:15) 
-- CODE:
n = int(input(2**3))
print = ("n")


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:44:19) 
-- CODE:
n = int(input(2**3))
print = ("n")


-- EXECUTION TIME:
0.1297
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
8
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
8
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:47:00) 
-- CODE:
n = int(input(2**6))
total= n
print = (total)


-- OUTPUT:
64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:47:04) 
-- CODE:
n = int(input(2**6))
total= n
print = (total)


-- EXECUTION TIME:
0.163794
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
64
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
64
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
64
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:47:11) 
-- CODE:
n = int(input(2**6))
total= n
print = (total)


-- OUTPUT:
64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:47:25) 
-- CODE:
n = (input(2**6))
total= n
print = (total)


-- EXECUTION TIME:
0.14172
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
64
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
64
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
64
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:47:28) 
-- CODE:
n = (input(2**6))
total= n
print = (total)


-- OUTPUT:
64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:47:40) 
-- CODE:
n = (input(2**6))
total= n
print = (total)


-- EXECUTION TIME:
0.207196
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
64
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
64
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
64
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:47:51) 
-- CODE:
n = (input(int(2**6))
total= n
print = (total)


-- ERROR:
File "XXXX", line 2
    total= n
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:48:03) 
-- CODE:
n = (input(2**6))
total= n
print = (total)


-- OUTPUT:
64
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:48:14) 
-- CODE:
n = (input(2**6))
total= n
print = (total)


-- EXECUTION TIME:
0.13014
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
64
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
64
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
64
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:48:33) 
-- CODE:
n = (input(2**4))
total= n
print = (total)


-- EXECUTION TIME:
0.186035
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
16
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
16
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:49:06) 
-- CODE:
n = (input(2**2))
total= n
print = (total)


-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:49:52) 
-- CODE:
n = (input(2**3))
total= n
print = (total)


-- EXECUTION TIME:
0.142023
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
8
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
8
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:49:53) 
-- CODE:
n = (input(2**3))
total= n
print = (total)


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:51:26) 
-- CODE:
n = (input("DIGITE UM NUMERO"))


print = (n)


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:51:41) 
-- CODE:
n = (input("DIGITE UM NUMERO:"))


print = (n)


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:52:13) 
-- CODE:
n = (input("DIGITE UM NUMERO:"))
total = (n)

print = (n)


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:52:30) 
-- CODE:
n = (input("DIGITE UM NUMERO:"))
total = (n)

print = (n)


-- EXECUTION TIME:
0.150308
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:

-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:

-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:52:53) 
-- CODE:
n = (input(2**(3))

print = (n)


-- EXECUTION TIME:
0.14596
-- ERROR:
  File "/home/codebench/codes/1616/2925/main.py", line 3
    print = (n)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
